--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ eventuatePluginsGradleVersion=0.4.0.BUILD-SNAPSHOT
 dockerComposePluginVersion=0.12.0
 quarkusVersion=1.11.0.Beta1
 eventuateUtilVersion=0.7.0.RELEASE
-eventuateCommonVersion=0.13.0-SNAPSHOT
+eventuateCommonVersion=0.13.0.DB_ID_GEN.BUILD-SNAPSHOT
 removeContainers=false
 
 eventuateCommonImageVersion=0.13.0.DB_ID_GEN.BUILD-SNAPSHOT
