Extracted datasource configuration to separate folder.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 include 'eventuate-common-quarkus-jdbc'
+include 'eventuate-common-quarkus-jdbc-test-configuration'
 include 'eventuate-common-quarkus-id'
 include 'eventuate-common-quarkus-in-memory-database'
 
