--- a/eventuate-common-quarkus-jdbc-test-configuration/build.gradle
+++ b/eventuate-common-quarkus-jdbc-test-configuration/build.gradle
@@ -6,22 +6,13 @@ plugins {
 apply plugin: PublicModulePlugin
 
 dependencies {
-    compile "io.eventuate.common:eventuate-common-jdbc:$eventuateCommonVersion"
-
     compile 'io.quarkus:quarkus-core'
     compile 'io.quarkus.arc:arc'
     compile 'io.quarkus:quarkus-arc-deployment'
     compile 'io.quarkus:quarkus-agroal'
-
-    testCompile project (":eventuate-common-quarkus-id")
-    testCompile project (":eventuate-common-quarkus-jdbc-test-configuration")
-
-    testCompile "io.eventuate.common:eventuate-common-jdbc-tests:$eventuateCommonVersion"
-    testCompile 'io.quarkus:quarkus-junit5'
+    compile "io.quarkus:quarkus-jdbc-mysql"
+    compile "io.quarkus:quarkus-jdbc-postgresql"
+    compile "io.quarkus:quarkus-jdbc-mssql"
 
     implementation enforcedPlatform("io.quarkus:quarkus-bom:${quarkusVersion}")
-}
-
-test {
-    useJUnitPlatform()
 }
