--- a/eventuate-common-quarkus-jdbc/build.gradle
+++ b/eventuate-common-quarkus-jdbc/build.gradle
@@ -1,3 +1,5 @@
+import org.apache.tools.ant.filters.ReplaceTokens
+
 plugins {
     id "io.quarkus" version "${quarkusVersion}"
     id 'org.kordamp.gradle.jandex' version '0.6.0'
@@ -24,4 +26,9 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+processTestResources {
+    outputs.upToDateWhen { false }
+    filter ReplaceTokens, tokens: ["EVENTUATEDATABASE": System.env.EVENTUATEDATABASE ?: "mysql"]
 }
