--- a/eventuate-common-quarkus-in-memory-database/build.gradle
+++ b/eventuate-common-quarkus-in-memory-database/build.gradle
@@ -8,11 +8,14 @@ apply plugin: PublicModulePlugin
 dependencies {
     compile "io.eventuate.common:eventuate-common-in-memory-database:$eventuateCommonVersion"
 
+    compile project (":eventuate-common-quarkus-jdbc")
+
+
     compile 'io.quarkus:quarkus-core'
     compile 'io.quarkus.arc:arc'
     compile 'io.quarkus:quarkus-arc-deployment'
+    compile 'io.quarkus:quarkus-jdbc-h2'
     compile 'io.quarkus:quarkus-agroal'
-    compile "io.quarkus:quarkus-jdbc-mysql"
 
     testCompile 'io.quarkus:quarkus-junit5'
 
