--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,6 +55,8 @@ workflows:
           script: ./build-and-test-all-postgres.sh
       - build-and-test/build-and-test:
           name: deploy-artifacts
+          context:
+            - publish
           requires:
             - build-and-test-mysql
             - build-and-test-mysql8
