Upgraded eventuate dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,14 +8,14 @@ bintrayRepoType=defineMe
 bintrayPkgName=eventuate-common-quarkus
 bintrayPkgVcsUrl=https://github.com/eventuate-foundation/eventuate-common-quarkus
 
-eventuatePluginsGradleVersion=0.4.0.BUILD-SNAPSHOT
+eventuatePluginsGradleVersion=0.5.2.BUILD-SNAPSHOT
 
 dockerComposePluginVersion=0.12.0
 quarkusVersion=1.11.0.Beta1
-eventuateUtilVersion=0.7.0.RELEASE
-eventuateCommonVersion=0.13.0.DB_ID_GEN.BUILD-SNAPSHOT
+eventuateUtilVersion=0.8.0.BUILD-SNAPSHOT
+eventuateCommonVersion=0.13.0.BUILD-SNAPSHOT
 removeContainers=false
 
-eventuateCommonImageVersion=0.13.0.DB_ID_GEN.BUILD-SNAPSHOT
+eventuateCommonImageVersion=0.13.0.BUILD-SNAPSHOT
 
 version=0.1.0-SNAPSHOT
