--- a/eventuate-common-quarkus-in-memory-database/src/main/resources/application.properties
+++ b/eventuate-common-quarkus-in-memory-database/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 eventuateDatabase=h2
 quarkus.datasource.db-kind=h2
-quarkus.datasource.jdbc.url=jdbc:h2:~/test
+quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb
 quarkus.datasource.username=sa
 quarkus.datasource.password=
