--- a/gradle.properties
+++ b/gradle.properties
@@ -5,14 +5,14 @@ bintrayRepoType=defineMe
 bintrayPkgName=eventuate-common-quarkus
 bintrayPkgVcsUrl=https://github.com/eventuate-foundation/eventuate-common-quarkus
 
-eventuatePluginsGradleVersion=0.10.0.RELEASE
+eventuatePluginsGradleVersion=0.11.0.BUILD-SNAPSHOT
 
 dockerComposePluginVersion=0.12.0
 quarkusVersion=1.11.0.Beta1
-eventuateUtilVersion=0.14.1.RELEASE
-eventuateCommonVersion=0.15.0.RELEASE
+eventuateUtilVersion=0.15.0.BUILD-SNAPSHOT
+eventuateCommonVersion=0.16.0.BUILD-SNAPSHOT
 removeContainers=false
 
-eventuateCommonImageVersion=0.15.0.RELEASE
+eventuateCommonImageVersion=0.16.0.BUILD-SNAPSHOT
 
 version=0.3.0-SNAPSHOT
