--- a/docker-compose-zookeeper.yml
+++ b/docker-compose-zookeeper.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
   zookeeper:
-    image: confluentinc/cp-zookeeper:5.2.4
+    image: eventuateio/eventuate-zookeeper:$EVENTUATE_COMMON_VERSION
     ports:
       - 2181:2181
