--- a/build.gradle
+++ b/build.gradle
@@ -68,30 +68,30 @@ dockerCompose {
     mysql {
         projectName = null
         useComposeFiles = ["docker-compose-mysql.yml", "docker-compose-zookeeper.yml"]
-        removeContainers = project.ext.removeContainers
+        removeContainers = project.ext.removeContainers.toBoolean()
     }
 
     mysql8 {
         projectName = null
         useComposeFiles = ["docker-compose-mysql8.yml", "docker-compose-zookeeper.yml"]
-        removeContainers = project.ext.removeContainers
+        removeContainers = project.ext.removeContainers.toBoolean()
     }
 
     mariadb {
         projectName = null
         useComposeFiles = ["docker-compose-mariadb.yml", "docker-compose-zookeeper.yml"]
-        removeContainers = project.ext.removeContainers
+        removeContainers = project.ext.removeContainers.toBoolean()
     }
 
     postgres {
         projectName = null
         useComposeFiles = ["docker-compose-postgres.yml", "docker-compose-zookeeper.yml"]
-        removeContainers = project.ext.removeContainers
+        removeContainers = project.ext.removeContainers.toBoolean()
     }
 
     mssql {
         projectName = null
         useComposeFiles = ["docker-compose-mssql.yml", "docker-compose-zookeeper.yml"]
-        removeContainers = project.ext.removeContainers
+        removeContainers = project.ext.removeContainers.toBoolean()
     }
 }
