--- a/gradle.properties
+++ b/gradle.properties
@@ -5,14 +5,14 @@ bintrayRepoType=defineMe
 bintrayPkgName=eventuate-common-quarkus
 bintrayPkgVcsUrl=https://github.com/eventuate-foundation/eventuate-common-quarkus
 
-eventuatePluginsGradleVersion=0.13.0.BUILD-SNAPSHOT
+eventuatePluginsGradleVersion=0.12.0.RELEASE
 
 dockerComposePluginVersion=0.16.12
 quarkusVersion=1.11.0.Beta1
-eventuateUtilVersion=0.17.0.BUILD-SNAPSHOT
-eventuateCommonVersion=0.18.0.BUILD-SNAPSHOT
+eventuateUtilVersion=0.16.0.RELEASE
+eventuateCommonVersion=0.18.0.RELEASE
 removeContainers=false
 
-eventuateCommonImageVersion=0.18.0.BUILD-SNAPSHOT
+eventuateCommonImageVersion=0.18.0.RELEASE
 
 version=0.6.0-SNAPSHOT
