--- a/gradle.properties
+++ b/gradle.properties
@@ -5,11 +5,11 @@ bintrayRepoType=defineMe
 bintrayPkgName=eventuate-common-quarkus
 bintrayPkgVcsUrl=https://github.com/eventuate-foundation/eventuate-common-quarkus
 
-eventuatePluginsGradleVersion=0.12.0.RELEASE
+eventuatePluginsGradleVersion=0.13.0.BUILD-SNAPSHOT
 
 dockerComposePluginVersion=0.12.0
 quarkusVersion=1.11.0.Beta1
-eventuateUtilVersion=0.16.0.RELEASE
+eventuateUtilVersion=0.17.0.BUILD-SNAPSHOT
 eventuateCommonVersion=0.18.0.RELEASE
 removeContainers=false
 
