--- a/gradle.properties
+++ b/gradle.properties
@@ -10,9 +10,9 @@ eventuatePluginsGradleVersion=0.13.0.BUILD-SNAPSHOT
 dockerComposePluginVersion=0.12.0
 quarkusVersion=1.11.0.Beta1
 eventuateUtilVersion=0.17.0.BUILD-SNAPSHOT
-eventuateCommonVersion=0.18.0.RELEASE
+eventuateCommonVersion=0.19.0.BUILD-SNAPSHOT
 removeContainers=false
 
-eventuateCommonImageVersion=0.18.0.RELEASE
+eventuateCommonImageVersion=0.19.0.BUILD-SNAPSHOT
 
 version=0.7.0-SNAPSHOT
