--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,6 @@ buildscript {
 }
 
 plugins {
-    id "com.github.hierynomus.license" version "0.12.1"
 }
 
 apply plugin: 'docker-compose'
@@ -25,9 +24,6 @@ allprojects {
 
 projects {
 
-    license {
-        header rootProject.file('src/license/HEADER')
-    }
 }
 
 subprojects {
@@ -41,7 +37,7 @@ subprojects {
     }
 
     dependencies {
-        testCompile "junit:junit:4.12"
+        testImplementation "junit:junit:4.12"
     }
 }
 
@@ -68,30 +64,30 @@ dockerCompose {
     mysql {
         projectName = null
         useComposeFiles = ["docker-compose-mysql.yml", "docker-compose-zookeeper.yml"]
-        removeContainers = project.ext.removeContainers
+        removeContainers = Boolean.valueOf(project.ext.removeContainers)
     }
 
     mysql8 {
         projectName = null
         useComposeFiles = ["docker-compose-mysql8.yml", "docker-compose-zookeeper.yml"]
-        removeContainers = project.ext.removeContainers
+        removeContainers = Boolean.valueOf(project.ext.removeContainers)
     }
 
     mariadb {
         projectName = null
         useComposeFiles = ["docker-compose-mariadb.yml", "docker-compose-zookeeper.yml"]
-        removeContainers = project.ext.removeContainers
+        removeContainers = Boolean.valueOf(project.ext.removeContainers)
     }
 
     postgres {
         projectName = null
         useComposeFiles = ["docker-compose-postgres.yml", "docker-compose-zookeeper.yml"]
-        removeContainers = project.ext.removeContainers
+        removeContainers = Boolean.valueOf(project.ext.removeContainers)
     }
 
     mssql {
         projectName = null
         useComposeFiles = ["docker-compose-mssql.yml", "docker-compose-zookeeper.yml"]
-        removeContainers = project.ext.removeContainers
+        removeContainers = Boolean.valueOf(project.ext.removeContainers)
     }
 }
