Fixed build failure caused by not removing containers

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,5 @@
 deployUrl=file:///Users/cer/.m2/testdeploy
 eventuateMavenRepoUrl=file:///Users/cer/.m2/testdeploy,https://snapshots.repositories.eventuate.io/repository
-bintrayRepoType=defineMe
-
-bintrayPkgName=eventuate-common-quarkus
-bintrayPkgVcsUrl=https://github.com/eventuate-foundation/eventuate-common-quarkus
 
 eventuatePluginsGradleVersion=0.13.0.BUILD-SNAPSHOT
 
@@ -11,7 +7,7 @@ dockerComposePluginVersion=0.17.7
 quarkusVersion=1.11.0.Beta1
 eventuateUtilVersion=0.17.0.BUILD-SNAPSHOT
 eventuateCommonVersion=0.19.0.BUILD-SNAPSHOT
-removeContainers=false
+removeContainers=true
 
 eventuateCommonImageVersion=0.19.0.BUILD-SNAPSHOT
 
