enforcedPlatform -> platform to fix publishing problem

--- a/eventuate-common-quarkus-in-memory-database/build.gradle
+++ b/eventuate-common-quarkus-in-memory-database/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 
     testImplementation 'io.quarkus:quarkus-junit5'
 
-    implementation enforcedPlatform("io.quarkus:quarkus-bom:${quarkusVersion}")
+    implementation platform("io.quarkus:quarkus-bom:${quarkusVersion}")
 }
 
 test {
