--- a/eventuate-common-quarkus-jdbc-test-configuration/build.gradle
+++ b/eventuate-common-quarkus-jdbc-test-configuration/build.gradle
@@ -14,5 +14,5 @@ dependencies {
     api "io.quarkus:quarkus-jdbc-mssql"
     api 'io.quarkus:quarkus-junit5'
 
-    implementation enforcedPlatform("io.quarkus:quarkus-bom:${quarkusVersion}")
+    implementation platform("io.quarkus:quarkus-bom:${quarkusVersion}")
 }
