--- a/eventuate-common-quarkus-id/build.gradle
+++ b/eventuate-common-quarkus-id/build.gradle
@@ -13,7 +13,7 @@ dependencies {
 
     testImplementation 'io.quarkus:quarkus-junit5'
 
-    implementation enforcedPlatform("io.quarkus:quarkus-bom:${quarkusVersion}")
+    implementation platform("io.quarkus:quarkus-bom:${quarkusVersion}")
 }
 
 test {
