--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 deployUrl=file:///Users/cer/.m2/testdeploy
 eventuateMavenRepoUrl=file:///Users/cer/.m2/testdeploy,https://snapshots.repositories.eventuate.io/repository
 
-eventuatePluginsGradleVersion=0.13.0.BUILD-SNAPSHOT
+eventuatePluginsGradleVersion=0.13.0.RELEASE
 
 dockerComposePluginVersion=0.17.7
 quarkusVersion=1.11.0.Beta1
-eventuateUtilVersion=0.17.0.BUILD-SNAPSHOT
-eventuateCommonVersion=0.19.0.BUILD-SNAPSHOT
+eventuateUtilVersion=0.17.0.RELEASE
+eventuateCommonVersion=0.19.0.RELEASE
 removeContainers=true
 
-eventuateCommonImageVersion=0.19.0.BUILD-SNAPSHOT
+eventuateCommonImageVersion=0.19.0.RELEASE
 
 version=0.7.0-SNAPSHOT
