--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 deployUrl=file:///Users/cer/.m2/testdeploy
 eventuateMavenRepoUrl=file:///Users/cer/.m2/testdeploy,https://snapshots.repositories.eventuate.io/repository
 
-eventuatePluginsGradleVersion=0.13.0.RELEASE
+eventuatePluginsGradleVersion=0.14.0.BUILD-SNAPSHOT
 
 dockerComposePluginVersion=0.17.7
 quarkusVersion=1.11.0.Beta1
-eventuateUtilVersion=0.18.0.RELEASE
-eventuateCommonVersion=0.20.0.RELEASE
+eventuateUtilVersion=0.19.0.BUILD-SNAPSHOT
+eventuateCommonVersion=0.21.0.BUILD-SNAPSHOT
 removeContainers=true
 
-eventuateCommonImageVersion=0.20.0.RELEASE
+eventuateCommonImageVersion=0.21.0.BUILD-SNAPSHOT
 
 version=0.8.0-SNAPSHOT
